Fix HTML syntax and update webhook URL

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ input{
         const targetLongitude = -8.63318; // Longitude da Loja 
  
         // URL do Webhook do Make 
-        const makeWebhookURL = "5b0t3j1lqti2pr270lwboa967puiin6v@hook.eu1.make.com"; // Substituir pelo nosso Webhook do Make 
+        const makeWebhookURL = "https://hook.eu1.make.com/w369izh40heej3b5uxp4xunyq8i3bny6"; // Substituir pelo nosso Webhook do Make 
  
         // Função para capturar a localização do utilizador 
         function getLocation() { 
@@ -145,4 +145,5 @@ break;
 } 
 </script> 
 </body> 
+
 </html>
